--- a/Geo2.tex
+++ b/Geo2.tex
@@ -625,7 +625,7 @@ $x+y=180^\circ$
 
 \subsubsection{Power of a point formula}
 
-\[PoP = {PO}^2+r^2\]
+\[PoP = {PO}^2-r^2\]
 
 \begin{center}
 \includegraphics{Picture14.png}
